--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon -r dotenv/config --experimental-json-modules index.js"
+    "dev": "nodemon -r dotenv/config --experimental-json-modules index.js",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -20,5 +21,11 @@
     "mongoose": "^8.4.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.3"
+  },
+  "dependencies": {
+    "@emailjs/browser": "^4.3.3",
+    "api-rate-limiter-middleware": "^1.0.2",
+    "googleapis": "^140.0.1",
+    "nodemailer": "^6.9.14"
   }
 }
